--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ header.sticky{
     display: none;
     align-items: center;
 }
+.navbar{
+    display: flex;
+   
+}
 .navbar a{
     font-size: 1.7rem;
     color: var(--text-color);
@@ -697,6 +701,7 @@ footer a i{
 
 /*media query*/
 
+
  @media( max-width:799px){
     nav{
         display: flex;
@@ -791,4 +796,38 @@ footer a i{
     position: absolute;
     bottom: px;
     left: 20px;
+}
+@media (max-width:1120px)
+{
+    #menu-icon{
+        display: block;
+    }
+    
+    .navbar {
+        position: absolute;
+        top:-1000px;
+        right: 300px;
+        width: 100%;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        text-align: center;
+        transition: all .45s ease;
+    }
+    .navbar a{
+        display: block;
+        margin: 10px;
+        font-size: 20px;
+        transition: all .45s ease;
+        color: var(--text-color);
+    }
+    .navbar a:hover{
+        color: var(--main-color);
+    }
+   
+    .navbar.open{
+        top: 100%;
+    }
+
 }
