--- a/style.css
+++ b/style.css
@@ -706,102 +706,7 @@ footer a i{
 
 /media query/
 
- @media( max-width:799px){
-    nav{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;   
-        position: fixed;
-        top: 0;
-        right: -300px;
-        height: 100vh;
-        width: 300px;
-        background-color: #e3e6f3;
-        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
-        padding: 80px 0 0 10px;
-        transition: 0.3s;
-    }
-
-  
-    nav a{
-        margin-bottom: 29px;
-    } 
-    nav.active{
-        right: 0px;
-    }
-
-    #navbar li{
-        margin-bottom: 25px;
-    } 
-
-    #mobile{
-        display: flex;
-        align-items: center;
-    }
-
-    #mobile i{
-        color: #dadada;
-        font-size: 30px;
-        padding-left: 15px;
-    }
-
-    section {
-        min-height: 60vh;
-    
-    }
-    .box{
-        
-        margin: 10px 10px;
-       
-    }
-    .skill-main h3 {
-        margin-bottom: 2rem;
-        font-size: 11px;
-        text-align: center;
-    }
-    .skill-left .skill-bar .bar {
-        width: 137%;
-    }
-    #close{
-        display: initial;
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        color: #dadada;
-        font-size: 24px;
-    }
-    *{
-        font-size: 10px;
-        
-    }
-    h1,span{
-        font-size: 25px;
-    }
-    .about{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-        background: var(--second-bg-color);
-    }
-
-  
-
-
- }
- .navbar a.active
-{
-    content: "";
-    width:30% ;
-    height: 2px;
-    background: #088178;
-    position: absolute;
-    bottom: px;
-    left: 20px;
-}
-@media (max-width:1120px)
+@media (max-width:1124px)
 {
     #menu-icon{
         display: block;
@@ -834,8 +739,14 @@ footer a i{
         top: 100%;
     }
 }
-@media (max-width:815px)
+@media(max-width:665px)
 {
-
+.skill-main {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 50px;
+}
 
 }
