--- a/style.css
+++ b/style.css
@@ -698,7 +698,6 @@ footer a i{
 }
 
 
-
 @media (max-width:1124px)
 {
     #menu-icon{
@@ -743,3 +742,61 @@ footer a i{
 }
 
 }
+@media(max-width:650px)
+{
+    .about {
+        display: grid;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        background: var(--second-bg-color);
+    }
+    .about-content h2 {
+        text-align: center;
+        line-height: 1.2;
+    }
+    .about-img img {
+        width: 70vw;
+    }
+    .filter-buttons .btn, .form-btn .btn {
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        font-size: 1.25rem;
+        font-weight: 600;
+        letter-spacing: -0.6px;
+        margin-left: 1.3rem;
+        color: var(--text-color);
+    }
+    
+}
+@media(max-width:944px)
+{
+    .home-img img {
+        width: 0vw;
+    }
+}
+@media(max-width:335px)
+{
+    .filter-buttons {
+        margin: 0rem;
+        text-align: center;
+    }
+    .filter-buttons .btn, .form-btn .btn {
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        font-size: 1.25rem;
+        font-weight: 600;
+        letter-spacing: -0.6px;
+        margin-top: 1.4rem;
+        margin-left: 1.3rem;
+        margin-right: 0.4rem;
+        margin-bottom: 1.1rem;
+        color: var(--text-color);
+    }
+}
+
