--- a/logo.css
+++ b/logo.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     padding: 50px 8%;
-    background-color: #adadad;
+    background-color: #1f242d;
 }
 .gallery{
     display: grid;
