--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ footer a i{
 @media (max-width:1124px)
 {
     section {
-    min-height: 78vh;
+    min-height: 68vh;
     padding: 10rem 9% 2rem;
 }
     #menu-icon{
@@ -836,6 +836,15 @@ footer a i{
 }
 @media(max-width:620px)
 {
+    .home-content h1 {
+    font-size: 3.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+    .home-content h3 {
+    font-size: 2.6rem;
+    font-weight: 700;
+}
     .filter-buttons {
         margin: 0rem;
         text-align: center;
