--- a/style.css
+++ b/style.css
@@ -864,4 +864,16 @@ footer a i{
         color: var(--text-color);
     }
 }
+@media(max-width:4000px)
+{
+ .home-content h1 {
+    font-size: 3.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+    .home-content h3 {
+    font-size: 2.6rem;
+    font-weight: 700;
+}
+}
 
