--- a/style.css
+++ b/style.css
@@ -864,7 +864,7 @@ footer a i{
         color: var(--text-color);
     }
 }
-@media(max-width:4000px)
+@media(max-width:400px)
 {
  .home-content h1 {
     font-size: 3.6rem;
@@ -876,4 +876,23 @@ footer a i{
     font-weight: 700;
 }
 }
+@media(max-width:820px)
+.filter-buttons {
+        margin: 0rem;
+        text-align: center;
+    }
+    .filter-buttons .btn, .form-btn .btn {
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        font-size: 1.25rem;
+        font-weight: 600;
+        letter-spacing: -0.6px;
+        margin-top: 1.4rem;
+        margin-left: 1.3rem;
+        margin-right: 0.4rem;
+        margin-bottom: 2rem;
+        color: var(--text-color);
+    }
 
